Added color palette variables

--- a/styl/style.styl
+++ b/styl/style.styl
@@ -1,4 +1,12 @@
+bg      = #1D3C42
+fg      = #67BFAD
+col1    = #F2EC99
+col2    = #F2C48D
+col3    = #F25050
+
+
+
 html, body
-    background #1D3C42
+    background bg
     width 100%
     height 100%
