--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,86 @@ body {
   width: 100%;
   height: 100%;
 }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+section#container {
+  width: 800px;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+section#container textarea {
+  width: 100%;
+  height: 200px;
+  padding: 20px;
+}
+section#container input[type='text'] {
+  width: 100%;
+  margin-top: 20px;
+}
+section#container textarea,
+section#container input[type='text'] {
+  border-radius: 20px;
+  background: rgba(0,0,0,0.2);
+  border: none;
+  box-shadow: 0px 0px 100px rgba(255,255,255,0.2);
+  color: #67bfad;
+}
+section#container input[type='submit'] {
+  margin-top: 20px;
+  width: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#stars {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+#stars .star {
+  width: 1px;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  animation: glow 1s linear infinite;
+  border-radius: 100%;
+}
+@-moz-keyframes glow {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+@-webkit-keyframes glow {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+@-o-keyframes glow {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+@keyframes glow {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
