--- a/styl/style.styl
+++ b/styl/style.styl
@@ -10,3 +10,56 @@ html, body
     background bg
     width 100%
     height 100%
+*
+    box-sizing border-box
+    margin 0
+    padding 0
+
+
+section#container
+    width 800px
+    height 100%
+    position absolute
+    left 50%
+    top 50%
+    transform translate(-50%, -50%)
+
+    textarea
+        width 100%
+        height 200px
+        padding 20px
+    input[type='text']
+        width 100%
+        margin-top 20px
+    textarea, input[type='text']
+        border-radius 20px
+        background rgba(black, 0.2)
+        border none
+        box-shadow: 0px 0px 100px rgba(white, 0.2)
+        color fg
+    input[type='submit']
+        margin-top 20px
+        width 50%
+        position absolute
+        left 50%
+        transform translateX(-50%)
+
+
+#stars
+    width 100%
+    height 100%
+    overflow hidden
+    position relative
+    .star
+        width 1px
+        height 1px
+        background white
+        position absolute
+        animation glow 1s linear infinite
+        border-radius 100%
+
+@keyframes glow
+    0%
+        opacity 1
+    100%
+        opacity 0.5
