--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 html,
 body {
-  background: #1d3c42;
+  background: #002635;
   width: 100%;
   height: 100%;
+  color: #67bfad;
 }
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Tahoma';
 }
 section#container {
   width: 800px;
@@ -16,44 +18,258 @@ section#container {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
-section#container textarea {
-  width: 100%;
-  height: 200px;
+section#container .content {
   padding: 20px;
-}
-section#container input[type='text'] {
-  width: 100%;
-  margin-top: 20px;
-}
-section#container textarea,
-section#container input[type='text'] {
-  border-radius: 20px;
-  background: rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 250px rgba(242,236,153,0.1);
   border: none;
-  box-shadow: 0px 0px 100px rgba(255,255,255,0.2);
+  border-radius: 20px;
+  width: 100%;
+  background: rgba(0,0,0,0.2);
   color: #67bfad;
 }
-section#container input[type='submit'] {
+section#container #logo {
+  display: block;
+  height: 100px;
+  width: 250px;
+  margin: 20px auto;
+}
+section#container #logo svg {
+  width: 250px;
+  height: 100px;
+}
+section#container form textarea {
+  height: 300px;
+}
+section#container form textarea,
+section#container form input[type='text'],
+section#container form input[type="password"] {
+  background: rgba(0,0,0,0.2);
+  color: #67bfad;
+}
+section#container form input[type="submit"],
+section#container form select {
+  background: transparent;
+  border: 1px solid #f2ec99 !important;
+  color: #f2ec99;
+}
+section#container form * {
+  padding: 5px;
+  border-radius: 50px;
+  border: none;
+}
+section#container form input[type="text"],
+section#container form input[type="password"] {
+  padding: 5px 20px;
+}
+section#container form input[type="submit"] {
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
+}
+section#container form input[type="submit"]:hover {
+  background: #f2ec99 !important;
+  color: #002635;
+}
+section#container form div {
+  width: 100%;
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+section#container form div input[type="text"] {
+  width: 55%;
+}
+section#container form div input[type="submit"] {
+  width: 30%;
+}
+section#container form div select {
+  width: 10%;
+}
+section#container .heading {
+  font-size: 1.5em;
+  display: block;
+  width: 100%;
+  color: #f2ec99;
+  border-bottom: 1px solid #f2ec99;
+  padding: 0px 10px;
+  overflow: hidden;
+}
+section#container .heading > span {
+  font-size: 0.6em;
+  color: rgba(242,236,153,0.4);
+  margin-left: 10px;
+}
+section#container .heading > span > span {
+  margin: 0px 8px;
+}
+section#container .heading > span > a {
+  color: rgba(242,236,153,0.4);
+}
+section#container div#publics {
+  width: 100%;
+  margin-top: 50px;
+}
+section#container div#publics #items {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+section#container div#publics #items .item {
+  background: rgba(0,0,0,0.2);
+  padding: 10px 20px;
+  border-radius: 50px;
+  color: #f2ec99;
+  text-decoration: none;
+  font-size: 1.1em;
+  width: 175px;
+  text-align: center;
+  overflow: hidden;
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+section#container div#post {
+  margin-bottom: 75px;
+}
+section#container div#post pre {
+  overflow-x: scroll;
+}
+section#container div#post div.numbers {
+  height: inherit;
+  float: left;
+  margin-left: -5px;
+  margin-right: 10px;
+  color: rgba(103,191,173,0.3);
+  text-align: right;
+}
+section#container div#postinfo {
+  margin-bottom: 25px;
+}
+section#container div#postinfo #items {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+section#container.admin form,
+section#container.login form {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0px;
+}
+section#container.admin form *,
+section#container.login form * {
+  padding: 5px;
+  border-radius: 50px;
+  border: none;
+}
+section#container.admin form label,
+section#container.login form label {
+  width: 150px;
+}
+section#container.admin form input[type='text'],
+section#container.login form input[type='text'],
+section#container.admin form select,
+section#container.login form select {
   width: 50%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+}
+section#container.admin form input[type='submit'],
+section#container.login form input[type='submit'] {
+  width: 30%;
+}
+section#container.login form input[type="password"],
+section#container.login form input[type="text"] {
+  width: 34.5%;
+}
+section#container #plist .plist-item {
+  background: rgba(0,0,0,0.2);
+  padding: 10px 20px;
+  border-radius: 50px;
+  color: #f2ec99;
+  text-decoration: none;
+  font-size: 1.1em;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0px;
+}
+section#container #plist .plist-item span:nth-of-type(1) {
+  width: 50%;
+}
+section#container #plist .plist-item span:nth-of-type(2) {
+  font-size: 0.7em;
+  color: rgba(242,236,153,0.7);
+}
+section#container #plist .plist-item span:nth-of-type(3) {
+  font-size: 0.7em;
+  color: rgba(242,236,153,0.7);
+}
+section#container #plist .btn {
+  width: 30%;
+}
+section#container #plist .btn.prevpage {
+  float: left;
+}
+section#container #plist .btn.nextpage {
+  float: right;
 }
 #stars {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  position: relative;
+  position: fixed;
+  z-index: 0;
 }
 #stars .star {
   width: 1px;
   height: 1px;
   background: #fff;
   position: absolute;
-  animation: glow 1s linear infinite;
+  animation: glow 2s linear infinite;
   border-radius: 100%;
+}
+.mono {
+  font-family: 'monospace';
+}
+#error {
+  background: #f25050;
+  color: #002635;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.btn {
+  border: 1px solid #f2ec99;
+  border-radius: 50px;
+  padding: 8px 20px;
+  color: #f2ec99;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  transition: 0.1s ease-in-out;
+}
+.btn:hover {
+  background: #f2ec99 !important;
+  color: #002635;
+}
+input::placeholder {
+  color: rgba(103,191,173,0.2);
+}
+input::-webkit-input-placeholder {
+  color: rgba(103,191,173,0.2);
+}
+input::-moz-placeholder {
+  color: rgba(103,191,173,0.2);
+}
+input:-moz-placeholder {
+  color: rgba(103,191,173,0.2);
+}
+input::-ms-input-placeholder {
+  color: rgba(103,191,173,0.2);
 }
 @-moz-keyframes glow {
   0% {
