--- a/styl/style.styl
+++ b/styl/style.styl
@@ -1,8 +1,10 @@
-bg      = #1D3C42
+bg      = #002635
 fg      = #67BFAD
 col1    = #F2EC99
 col2    = #F2C48D
 col3    = #F25050
+
+placeholderColor = rgba(fg, 0.2)
 
 
 
@@ -10,10 +12,12 @@ html, body
     background bg
     width 100%
     height 100%
+    color fg
 *
     box-sizing border-box
     margin 0
     padding 0
+    font-family 'Tahoma'
 
 
 section#container
@@ -23,39 +27,178 @@ section#container
     left 50%
     top 50%
     transform translate(-50%, -50%)
+    z-index 1
 
-    textarea
-        width 100%
-        height 200px
+    .content
         padding 20px
-    input[type='text']
-        width 100%
-        margin-top 20px
-    textarea, input[type='text']
-        border-radius 20px
-        background rgba(black, 0.2)
+        box-shadow: 0px 0px 250px rgba(col1, 0.1)
         border none
-        box-shadow: 0px 0px 100px rgba(white, 0.2)
+        border-radius 20px
+        width 100%
+        background rgba(black, 0.2)
         color fg
-    input[type='submit']
-        margin-top 20px
-        width 50%
-        position absolute
-        left 50%
-        transform translateX(-50%)
+
+    #logo
+        display block
+        height 100px
+        width 250px
+        margin 20px auto
+        svg
+            width 250px
+            height 100px
+    form
+        textarea
+            height 300px
+        textarea, input[type='text'], input[type="password"]
+            background rgba(black, 0.2)
+            color fg
+        input[type="submit"], select
+            background transparent
+            border 1px solid col1 !important
+            color col1
+        *
+            padding 5px
+            border-radius 50px
+            border none
+        input[type="text"], input[type="password"]
+            padding 5px 20px
+        input[type="submit"]
+            cursor pointer
+            transition 0.1s ease-in-out
+            &:hover
+                background col1 !important
+                color bg
+        div
+            width 100%
+            margin-top 20px
+            display flex
+            justify-content space-between
+            input[type="text"]
+                width 55%
+            input[type="submit"]
+                width 30%
+            select
+                width 10%
+
+    .heading
+        font-size 1.5em
+        display block
+        width 100%
+        color col1
+        border-bottom 1px solid col1
+        padding 0px 10px
+        overflow hidden
+        > span
+            font-size 0.6em
+            color rgba(col1, 0.4)
+            margin-left 10px
+            > span
+                margin 0px 8px
+            > a
+                color rgba(col1, 0.4)
+
+    div#publics
+        width 100%
+        margin-top 50px
+        #items
+            padding 20px
+            display flex
+            justify-content space-between
+            flex-wrap wrap
+            .item
+                background rgba(black, 0.2)
+                padding 10px 20px
+                border-radius 50px
+                color col1
+                text-decoration none
+                font-size 1.1em
+                width 175px
+                text-align center
+                overflow hidden
+                margin-bottom 10px
+                white-space nowrap
+
+    div#post
+        margin-bottom 75px
+        pre
+            overflow-x scroll
+        div.numbers
+            height inherit
+            float left
+            margin-left -5px
+            margin-right 10px
+            color rgba(fg, 0.3)
+            text-align right
+    div#postinfo
+        margin-bottom 25px
+        #items
+            padding 20px
+            display flex
+            justify-content space-between
+            flex-wrap wrap
+
+    &.admin, &.login
+        form
+            display flex
+            justify-content space-between
+            margin 10px 0px;
+            *
+                padding 5px
+                border-radius 50px
+                border none
+            label
+                width 150px
+            input[type='text'], select
+                width 50%
+            input[type='submit']
+                width 30%
+    &.login
+        form
+            input[type="password"], input[type="text"]
+                width 34.5%
+
+    #plist
+        .plist-item
+            background rgba(black, 0.2)
+            padding 10px 20px
+            border-radius 50px
+            color col1
+            text-decoration none
+            font-size 1.1em
+            width 100%
+            overflow hidden
+            display flex
+            justify-content space-between
+            margin 10px 0px
+            span:nth-of-type(1)
+                width 50%
+            span:nth-of-type(2)
+                font-size 0.7em
+                color rgba(col1, 0.7)
+            span:nth-of-type(3)
+                font-size 0.7em
+                color rgba(col1, 0.7)
+        .btn
+            width 30%
+            &.prevpage
+                float left
+            &.nextpage
+                float right
+
 
 
 #stars
     width 100%
     height 100%
     overflow hidden
-    position relative
+    position fixed
+    z-index 0
     .star
         width 1px
         height 1px
         background white
         position absolute
-        animation glow 1s linear infinite
+        animation glow 2s linear infinite
         border-radius 100%
 
 @keyframes glow
@@ -63,3 +206,43 @@ section#container
         opacity 1
     100%
         opacity 0.5
+
+
+.mono
+    // font-family 'Courier New'
+    font-family 'monospace'
+
+#error
+    background col3
+    color bg
+    position absolute
+    text-align center
+    width 100%
+    top 0
+    left 0
+
+.btn
+    border 1px solid col1
+    border-radius 50px
+    padding 8px 20px
+    color col1
+    text-decoration none
+    display block
+    text-align center
+    transition 0.1s ease-in-out
+    &:hover
+        background col1 !important
+        color bg
+
+
+input
+    &::placeholder
+        color placeholderColor
+    &::-webkit-input-placeholder
+        color placeholderColor
+    &::-moz-placeholder
+        color placeholderColor
+    &:-moz-placeholder
+        color placeholderColor
+    &::-ms-input-placeholder
+        color placeholderColor
